Fixed issues with newly generated cards in the show page not aligning to updated changes

--- a/app/assets/stylesheets/event/_show.scss
+++ b/app/assets/stylesheets/event/_show.scss
@@ -298,8 +298,11 @@
 }
 
 .task-activity-title {
-  width: 80%;
   font-size: 0.8em;
+}
+
+.task-activity-title-container {
+  width: 85%;
 }
 
 /* Plus Icon Container */
